--- a/login.html
+++ b/login.html
@@ -130,6 +130,34 @@
           padding: 1.5rem 1rem 2rem;
         }
       }
+
+      /* Fullscreen Loader */
+      #loaderOverlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 9999;
+      }
+
+      #loaderOverlay .spinner-border {
+        width: 3rem;
+        height: 3rem;
+        color: #fff;
+      }
+
+      #loaderOverlay p {
+        margin-top: 1rem;
+        color: #fff;
+        font-size: 1.2rem;
+        font-weight: 500;
+      }
     </style>
 
     <!-- Firebase -->
@@ -176,10 +204,18 @@
             aria-live="assertive"
           ></div>
 
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary" id="loginBtn">
+            Login
+          </button>
         </form>
       </section>
     </main>
+
+    <!-- Fullscreen Loader -->
+    <div id="loaderOverlay">
+      <div class="spinner-border" role="status"></div>
+      <p>Logging in...</p>
+    </div>
 
     <footer>
       <p>
@@ -197,6 +233,8 @@
 
       const form = document.getElementById("loginForm");
       const errorEl = document.getElementById("loginError");
+      const loaderOverlay = document.getElementById("loaderOverlay");
+      const loginBtn = document.getElementById("loginBtn");
 
       form.addEventListener("submit", async (e) => {
         e.preventDefault();
@@ -212,6 +250,10 @@
           return;
         }
 
+        // Show fullscreen loader
+        loaderOverlay.style.display = "flex";
+        loginBtn.disabled = true;
+
         try {
           await firebase.auth().signInWithEmailAndPassword(email, password);
           window.location.href = "index.html";
@@ -220,6 +262,10 @@
           errorEl.textContent =
             "Login failed. Please check your email and password.";
           errorEl.style.display = "block";
+        } finally {
+          // Hide loader only if login fails (on success, redirect happens)
+          loaderOverlay.style.display = "none";
+          loginBtn.disabled = false;
         }
       });
     </script>
