--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payslip Generator</title>
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
 
     <!-- Favicon -->
@@ -203,15 +209,55 @@
       .toast-body {
         font-weight: 600;
       }
+
+      /* Fullscreen Loader Overlay */
+      #loaderOverlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.9);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 2000;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+      }
+
+      #loaderOverlay.active {
+        visibility: visible;
+        opacity: 1;
+      }
+
+      #topLoader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 0%;
+        height: 4px;
+        background: linear-gradient(90deg, #4bb2d6, #f5a700);
+        z-index: 2100;
+        transition: width 0.4s ease;
+      }
     </style>
   </head>
 
   <body>
+    <!-- Fullscreen Loader + Progress Bar -->
+    <div id="loaderOverlay">
+      <div class="modern-spinner"></div>
+      <p class="mt-3 font-weight-bold text-primary">
+        Processing... Please wait
+      </p>
+    </div>
+    <div id="topLoader"></div>
+
     <!-- Toast Container -->
-    <div
-      id="toastContainer"
-      style="position: fixed; top: 20px; right: 20px; z-index: 1050"
-    ></div>
+    <div id="toastContainer"></div>
 
     <div class="container mt-5">
       <form id="payslipForm" class="shadow glass rounded position-relative">
@@ -228,12 +274,13 @@
             class="btn btn-outline-danger"
             onclick="logoutUser()"
           >
-            🔒 Logout
+            <i class="bi bi-box-arrow-right"></i> Logout
           </button>
         </div>
 
         <input type="hidden" id="employeeId" />
 
+        <!-- Form Fields -->
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="payslipMonth">Payslip Month:</label>
@@ -318,47 +365,48 @@
           </div>
         </div>
 
+        <!-- Buttons -->
         <div class="mt-3">
           <button
             class="btn btn-success btn-block mb-2"
             onclick="sendPayslipsToAll(event)"
           >
-            📧 Send All Payslips
+            <i class="bi bi-envelope-fill"></i> Send All Payslips
           </button>
           <button
             type="button"
             class="btn btn-primary btn-block mb-2"
             onclick="generatePayslip()"
           >
-            Generate Payslip
+            <i class="bi bi-file-earmark-text"></i> Generate Payslip
           </button>
           <button
             type="button"
             class="btn btn-secondary btn-block mb-2"
             onclick="addOrUpdateEmployee()"
           >
-            ➕ Add / Update Employee
+            <i class="bi bi-person-plus-fill"></i> Add / Update Employee
           </button>
           <button
             type="button"
             class="btn btn-danger btn-block mb-2"
             onclick="deleteEmployee()"
           >
-            ❌ Delete Employee
+            <i class="bi bi-person-x-fill"></i> Delete Employee
           </button>
           <button
             type="button"
             class="btn btn-info btn-block mb-2"
             onclick="updateConversionRate()"
           >
-            🔄 Update Conversion Rate
+            <i class="bi bi-arrow-clockwise"></i> Update Conversion Rate
           </button>
           <button
             type="button"
             class="btn btn-warning btn-block"
             onclick="clearForm()"
           >
-            🧹 Clear Inputs
+            <i class="bi bi-broom-fill"></i> Clear Inputs
           </button>
         </div>
       </form>
@@ -382,7 +430,8 @@
         </div>
         <p id="current-employee" class="mt-2 font-weight-bold text-dark"></p>
         <div id="generation-completed" class="completed-message mt-2">
-          ✅ Payslip Generation Completed!
+          <i class="bi bi-check-circle-fill text-success"></i> Payslip
+          Generation Completed!
         </div>
       </div>
 
@@ -443,21 +492,18 @@
         <div class="text-center mt-3">
           <p class="font-weight-bold text-dark">BUDGET & FINANCE</p>
           <button id="sendEmailBtn" class="btn btn-warning mb-2">
-            📧 Send Email
+            <i class="bi bi-envelope-fill"></i> Send Email
           </button>
           <button
             id="printPayslipBtn"
             onclick="printPayslip()"
             class="btn btn-primary"
           >
-            🖨 Print Payslip
+            <i class="bi bi-printer-fill"></i> Print Payslip
           </button>
         </div>
       </div>
     </div>
-
-    <!-- Toast Container -->
-    <div id="toastContainer"></div>
 
     <!-- Scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.10.0/firebase-app-compat.js"></script>
@@ -474,6 +520,23 @@
           const confirmed = window.confirm(message);
           resolve(confirmed);
         });
+      }
+
+      function showLoader() {
+        document.getElementById("loaderOverlay").classList.add("active");
+        document.getElementById("topLoader").style.width = "30%";
+      }
+
+      function updateLoader(progress) {
+        document.getElementById("topLoader").style.width = progress + "%";
+      }
+
+      function hideLoader() {
+        document.getElementById("loaderOverlay").classList.remove("active");
+        document.getElementById("topLoader").style.width = "100%";
+        setTimeout(() => {
+          document.getElementById("topLoader").style.width = "0%";
+        }, 500);
       }
     </script>
 
